--- a/基础知识/函数.md
+++ b/基础知识/函数.md
@@ -13,6 +13,95 @@ function 函数名 (形参1,...){
 ...
 ```
 - 函数的意义在于封装，把实现某一个功能的代码封装在一起，后期在想实现这个功能，只需要执行函数即可，不需要重新编写这些代码=>'高内聚、低耦合'
+# 创建函数的过程
+- 1.创建一个函数类型的值(引用数据类型的)
+  + 开辟一个堆内存 16进制的地址
+  + 函数是把函数体中的代码，当做'字符串'存储起来进去的(对象存储的是健值对)
+  + 把地址存储到栈中，供调用
+- 2.创建变量(函数名)
+- 3.关联
+```
+let arr =[1,2,3]
+for (var i = 0; i<arr.length;i++){
+   liList[i].onclik=function () {
+     console.log(i) =>输出全都是4(因为函数在创建的时候，函数体中的代码当做'字符串'存储起来的)
+   }
+}
+
+解决方法：
+1.基于自定义属性方法:在之前某个阶段，把一些信息当做自定义属性赋值给元素对象，到后期,需要用到这些值的时候，我们从自定义属性中获取即可
+let arr =[1,2,3]
+for (var i = 0; i<arr.length;i++){
+   liList[i].index=i
+   liList[i].onclik=function () {
+     console.log(this.index) 
+}
+2.闭包
+let arr =[1,2,3]
+for (var i = 0; i<arr.length;i++){
+   liList[i].onclik=(function (i) {
+     return function(){console.log(i)} 
+})(i)
+3.基于let
+let arr =[1,2,3]
+for (let i = 0; i<arr.length;i++){
+   liList[i].onclik=function () {
+     console.log(i) 
+   }
+}
+
+```
 # 函数中的形参和实参
 - 形参：生产一个函数，想要实现一些功能，但是实现功能，需要的原材料不确定，需要用户执行他的时候给我，我才知道，此时我们提供入口=>形参(变量)
 - 实参：执行函数的时候，给指定的入口(形参变量)传递的具体值
+> 形参是创建函数的时候设定的变量，实参是执行函数时候给形参传递的具体值。
+> 设定形参变量，但是执行的时候没有传递对应的值，则形参默认的值是undefined。(少传值)
+> 多余的实参并没有对应的形参来接受，并不会报错(多传值)
+# 函数中的实参集合
+- arguments函数的内置方法，不管我们是否设置形参，再或者是否传递实参，arguments始终都存在(ES6箭头函数中没有arguments) =>只能出现在函数体中
+  + arguments是一个类数组集合(索引和length都存在)
+- 剩余运算符 ES6  ...args
+# 返回值
+- 当函数执行的时候，会形成一个全新的执行上下文(函数体中的代码会在这个上下文中运行),代码运行中，会把所有创建的变量存储到当前上下文的AO(变量对象)中，这些变量是'私有变量'；除当前上下文中可以使用这些变量的值，上下文以外的环境不能直接使用私有变量的值。
+- 如果外面想用当前上下文中的一些私有信息，则需要函数提供对应的出口，把信息提供给外面使用，而这个出口在JS函数中被称为"返回值 return"
+- 如果函数中没有写return，默认返回值就是undefined
+> return 后边放的一定是值，return后面的代码就不再执行了。
+# 匿名函数
+```
+1.函数表达式，把一个函数当作值赋值给变量或者事件绑定
+document.onclick = function() {
+  //此处就是匿名函数
+}
+let fn = function() {
+  //也是匿名函数 fn代表了这个函数 和function fn 类似
+}
+2.自执行函数，函数创建完就立即执行了(匿名函数自执行)
+(function(n){
+
+})(1000)
+(function(){}) 创建函数，function抱一个小括号是为了符合语法规范
+...(1000)执行函数
+```
+# 箭头函数
+- 箭头函数(ES6中新定义的创建函数的方法)
+```
+let fun = (x,y) => {
+  
+}
+```
+- 箭头函数可以简化函数编写的方式，如果函数体中只有一句return，则可以忽略大括号和return;如果只有一个形参可以忽略小括号
+```
+function fun(x,y) {
+  return x+y
+}
+简化
+let fun =(x,y)=>x+y
+
+function fun(x) {
+  return function (y) {
+    return x+y
+  }
+}
+简化
+let fun = x=>y=>x+y
+```
