--- a/基础知识/数据类型详解大全之数字类型.md
+++ b/基础知识/数据类型详解大全之数字类型.md
@@ -25,7 +25,22 @@
 # JS中，比较两个值是否相等，有以下方法
   + == 相等 如果数据类型不一样，默认需要转换为相同数据类型在比较   [] == [] =>false(引用数据类型比较的是空间地址)
   + === 绝对相等 数据值和数据类型都相等
-  + Object([value1],[value2]) ES6
+  + Object.is([value1],[value2]) ES6
 > + ==、数学运算、isNaN采用的都是Number()
 > + a = b ={n:1} 顺序：先创建值{n:1},再把值从左到右依次赋值 a = {n:1},b = {n:1}
 > + let a = 1 b = ++a 先运算再取值 b = a++ 先取值在运算
+> + a++ 和 a+=1 和 a=a+1都是在自身的基础上累加1，但是a++浏览器会给其做特殊处理(会把其转换为数字在进行累加)
+# 基于==进行比较的时候，左右两边数据类型不一致，隐式转换规则
+- NaN和任何值(包括自己本身)都不相等
+- infinity只和自己相等
+- Symbol(1) == Symbol(1) //=>不相等
+- 对象 == 对象 比较的是内存地址
+
+
+- null == undefined //=>true  null和undefined两个等号比较是相等的，三个等号是不相等的，除此之外他们和任何值相比较都不相等
+- 对象 == 字符串  对象转为字符串 其余的都是转换为数字类型在比较
+- 对象 == 数字    对象转为数字
+- 对象 == 布尔    都转为数字
+- 字符串 == 数字  字符串转为数字
+- 字符串 == 布尔  都转为数字
+- 布尔 == 数字    布尔转为数字
